--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <input type="text" name="inp1" id="users" placeholder="Username">
                 <label for="pass"></label>
                 <input type="password" name="inp2" id="pasfs" placeholder="Password">
-                <button type="submit" onclick="logarmobi()">Sign in</button>
+                <button type="submit">Sign in</button>
             </div>
         </section>
         <section id="login-desc">
@@ -63,7 +63,7 @@
                 <input type="text" name="inp1" id="usher" placeholder="Username">
                 <label for="pass"></label>
                 <input type="password" name="inp2" id="pahass" placeholder="Password">
-                <button type="submit" onclick="logarmobi()">Sign in</button>
+                <button type="submit">Sign in</button>
             </div>
         </section>
     </main>
